--- a/springcloud-config-client3355/src/main/resources/bootstrap.yml
+++ b/springcloud-config-client3355/src/main/resources/bootstrap.yml
@@ -24,3 +24,11 @@ eureka:
       # defaultZone: http://localhost:7001/eureka/
       # 集群版
       defaultZone: http://eureka7001.com:7001/eureka, http://eureka7002.com:7002/eureka
+
+# 暴露监控端口
+management:
+  endpoints:
+    web:
+      exposure:
+        include: "*"
+
