--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,7 @@
     <module>springcloud-gateway-gateway9527</module>
     <module>springcloud-config-center3344</module>
       <module>springcloud-config-client3355</module>
+      <module>springcloud-config-client3366</module>
   </modules>
   <packaging>pom</packaging>
 
