--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,8 @@
       <module>springcloud-stream-rabbitmq-provider8801</module>
     <module>springcloud-stream-rabbitmq-consumer8802</module>
     <module>springcloud-stream-rabbitmq-consumer8803</module>
+      <module>springcloud-consumer-sleuth-order80</module>
+    <module>springcloud-provider-sleuth-payment8005</module>
   </modules>
   <packaging>pom</packaging>
 
