--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,8 @@
     <module>springcloud-consumer-sleuth-order80</module>
     <module>springcloud-provider-sleuth-payment8005</module>
     <module>springcloud-provider-alibaba-payment9001</module>
+      <module>springcloud-provider-alibaba-payment9002</module>
+      <module>springcloud-consumer-alibaba-order80</module>
   </modules>
   <packaging>pom</packaging>
 
