--- a/pom.xml
+++ b/pom.xml
@@ -35,6 +35,7 @@
       <module>springcloud-provider-alibaba-payment9002</module>
       <module>springcloud-consumer-alibaba-order80</module>
       <module>springcloud-config-nacos-client3377</module>
+      <module>springcloud-sentinel-server8401</module>
   </modules>
   <packaging>pom</packaging>
 
