--- a/springcloud-config-nacos-client3377/pom.xml
+++ b/springcloud-config-nacos-client3377/pom.xml
@@ -9,7 +9,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>springcloud-config-nacos-client3377</artifactId>
+    <artifactId>springcloud-com.he.config-nacos-client3377</artifactId>
 
     <dependencies>
         <!--引入自己的 jar 包-->
@@ -52,10 +52,10 @@
             <artifactId>spring-cloud-starter-alibaba-nacos-discovery</artifactId>
         </dependency>
 
-        <!-- alibaba-nacos-config -->
+        <!-- config-server -->
         <dependency>
-            <groupId>com.alibaba.cloud</groupId>
-            <artifactId>spring-cloud-starter-alibaba-nacos-config</artifactId>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-config-server</artifactId>
         </dependency>
     </dependencies>
 
