--- a/springcloud-config/application-dev.yml
+++ b/springcloud-config/application-dev.yml
@@ -1,2 +1,2 @@
 config:
-  info: "master branch,SpringCloudStudy/springcloud-config/application-dev.yml version=6"
+  info: "master branch,SpringCloudStudy/springcloud-com.he.config/application-dev.yml version=6"
