--- a/springcloud-config-client3355/pom.xml
+++ b/springcloud-config-client3355/pom.xml
@@ -9,15 +9,14 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>springcloud-config-client3355</artifactId>
+    <artifactId>springcloud-com.he.config-client3355</artifactId>
 
     <dependencies>
-        <!-- spring-cloud-starter-config -->
+        <!-- config-server -->
         <dependency>
             <groupId>org.springframework.cloud</groupId>
-            <artifactId>spring-cloud-starter-config</artifactId>
+            <artifactId>spring-cloud-config-server</artifactId>
         </dependency>
-
         <!--引入自己的 jar 包-->
         <dependency>
             <groupId>SpringCloud</groupId>
